--- a/server/package.json
+++ b/server/package.json
@@ -10,16 +10,19 @@
   },
   "main": "../dist/server/main",
   "dependencies": {
-    "body-parser": "~1.18.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
+    "@weakenedplayer/app-config": "file:modules/app-config",
+    "body-parser": "^1.18.2",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.9",
     "es6-error": "^4.1.1",
-    "express": "~4.15.5",
-    "morgan": "~1.9.0",
+    "express": "^4.15.5",
+    "morgan": "^1.9.0",
+    "passport": "^0.4.0",
+    "passport-google-oauth": "^1.0.0",
     "request": "^2.85.0",
     "rxjs": "^6.1.0",
-    "serve-favicon": "~2.4.5",
-    "websocket": "^1.0.25"
+    "serve-favicon": "^2.4.5",
+    "websocket": "^1.0.26"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
