--- a/client/src/components/google-login/package.json
+++ b/client/src/components/google-login/package.json
@@ -8,5 +8,7 @@
   "scripts": {},
   "keywords": [],
   "author": "WeakenedPlayer",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+  }
 }
