--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.6.9",
     "es6-error": "^4.1.1",
     "express": "^4.15.5",
+    "firebase": "^4.13.1",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
