--- a/server/package.json
+++ b/server/package.json
@@ -16,14 +16,18 @@
     "debug": "^2.6.9",
     "es6-error": "^4.1.1",
     "express": "^4.15.5",
-    "firebase": "^4.13.1",
+    "firebase-admin": "^5.12.0",
+    "google-auth-library": "^1.4.0",
+    "googleapis": "^29.0.0",
     "morgan": "^1.9.0",
+    "nodemailer": "^4.6.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "request": "^2.85.0",
     "rxjs": "^6.1.0",
     "serve-favicon": "^2.4.5",
-    "websocket": "^1.0.26"
+    "websocket": "^1.0.26",
+    "xoauth2": "^1.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.11.1",
